syntax = "proto3";
import "google/protobuf/empty.proto";

package pb;

option go_package = "/pb";

message Error {
    string message = 1; 
}

service Command {
    rpc Set(SetCmdRequest) returns (SetCmdResponse);
    rpc Get(GetCmdRequest) returns (GetCmdResponse);
    rpc Del(DeleteCmdRequest) returns (DeleteCmdResponse);
}

service Discovery {
    rpc GetLeader(google.protobuf.Empty) returns (DiscoveryResponse);
}
service Node {
    rpc GetLog(GetLogRequest) returns (GetLogResponse);
}
message GetLogRequest {
    string start =1;
    string end=2;
}
message GetLogResponse {
 bytes data =1;   
}
message DiscoveryResponse {
    int32 port = 1;
}

message SetCmdResponse{
    Error error = 1;
}
message SetCmdRequest {
    string key = 1;
    bytes value = 2;
    int32 ttl = 3;
}
message GetCmdRequest{
    string key = 1;
}
message GetCmdResponse{
    bytes value = 1;
    Error error = 2;
}
message DeleteCmdRequest {
    string key = 1;
}
message DeleteCmdResponse {
    Error error = 1;
}